Fix carpet names to align correctly when using five-group.

--- a/frontend/src/app/carpet/carpet.component.scss
+++ b/frontend/src/app/carpet/carpet.component.scss
@@ -157,17 +157,21 @@
             justify-content: center;
             align-items: center;
             cursor: move;
-            font-size: 1.3vh;
+            font-size: 1.1vh;
           }
 
           &.five {
 
             .grid-right {
-              padding-top: 10px;
+              padding-bottom: 1vh;
             }
 
             .grid-left {
-              padding-top: 10px;
+              padding-bottom: 1vh;
+            }
+
+            .center {
+              padding-top: 1vh;
             }
           }
 
